--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "pragmarx/countries": "^0.8.2",
         "propaganistas/laravel-phone": "^4.2 || ^5.0",
         "upmind/domainnameapi-sdk": "^1.1",
-        "upmind/provision-provider-base": "^4.0"
+        "upmind/provision-provider-base": "^4.0",
+        "upmind/20i-php-sdk": "^1.1"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10"
