--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
     "require": {
         "upmind/provision-provider-base": "^3.7",
         "metaregistrar/php-epp-client": "^1.0.12",
-        "hexonet/php-sdk": "^5.0",
         "propaganistas/laravel-phone": "^4.2",
         "guzzlehttp/guzzle": "^6.3|^7.0",
         "pragmarx/countries": "^0.8.2",
         "africc/php-epp2": "^1.0",
         "upmind/domainnameapi-sdk": "^1.0",
         "fakerphp/faker": "^1.0",
-        "centralnic-reseller/php-sdk": "^8.0"
+        "centralnic-reseller/php-sdk": "^8.0",
+        "upmind/hexonet-php-sdk": "^5.8"
     },
     "extra": {
         "laravel": {
