--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,11 @@
             "Upmind\\ProvisionProviders\\DomainNames\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Upmind\\ProvisionProviders\\DomainNames\\Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": "8.1 - 8.3",
         "ext-curl": "*",
@@ -40,7 +45,8 @@
         "upmind/provision-provider-base": "^4.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.10"
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.5 || ^11.0 || ^12.0"
     },
     "extra": {
         "laravel": {
