--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,10 @@
         "centralnic-reseller/php-sdk": "^8.0",
         "upmind/hexonet-php-sdk": "^5.8"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^9.5 || ^10.5 || ^11.0 || ^12.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
