--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "php": "8.1 - 8.3",
         "ext-curl": "*",
         "ext-dom": "*",
+        "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "ext-soap": "*",
