Replace PHP 8,1 enum with eclabs enum implementation for easier backwards compatibility
# Conflicts:
#	src/CoccaEpp/Provider.php
#	src/Enom/Provider.php

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "guzzlehttp/guzzle": "^6.3|^7.0",
         "illuminate/support": "5.8.* || ^6.20 || ^10.0 || ^11.0 || 12.0",
         "metaregistrar/php-epp-client": "^1.0.12",
+        "myclabs/php-enum": "^1.8",
         "propaganistas/laravel-phone": "^4.2 || ^5.0",
         "upmind/domainnameapi-sdk": "^1.1",
         "upmind/pragmarx-countries": "^0.9.0",
